--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
