--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "browserify": "^17.0.0",
     "css-loader": "^6.7.1",
+    "dns": "^0.2.2",
     "html-webpack-plugin": "^5.5.0",
     "live-server": "^1.1.0",
     "mini-css-extract-plugin": "^2.6.1",
@@ -13,10 +15,13 @@
     "mongodb": "^4.9.1",
     "mongodb-client": "^0.0.1",
     "node-fetch": "^3.2.10",
+    "os-browserify": "^0.3.0",
     "realm-web": "^1.7.1",
     "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "timers-browserify": "^2.0.12",
+    "unsplash": "^4.2.0",
     "unsplash-js": "^7.0.15",
     "uuid": "^8.3.2",
     "webpack": "^5.74.0",
