--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sass": "^1.93.3",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.1",
+    "timers-browserify": "^2.0.12",
     "webpack": "^5.74.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
