--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@toast-ui/editor": "^3.2.2",
+    "dotenv": "^17.2.3",
     "imagekit-javascript": "^1.5.4",
     "marked": "^17.0.0",
     "moment": "^2.29.4",
