--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.9.1",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@toast-ui/editor": "^3.2.2",
     "dotenv": "^17.2.3",
