--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,69 @@
+# netlify.toml - WITH CACHE HEADERS (preserving your existing config)
+
 [dev]
 command = "npm run dev"
 targetPort = 8888
 port = 8080
 functions = "netlify/functions"
+framework = "#custom"
 
 [functions]
 directory = "netlify/functions"
 node_bundler = "esbuild"
+external_node_modules = ["mongodb"]
 
 [build]
 publish = "public"
 command = "npm run build"
 
+# Cache Headers for Static Assets
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+    # 1 year cache for hashed assets (CSS, JS with version hashes)
 
+[[headers]]
+  for = "/images/*"
+  [headers.values]
+    Cache-Control = "public, max-age=2592000"
+    # 30 days for images
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=604800"
+    # 7 days for CSS
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=604800"
+    # 7 days for JS
+
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+    # Always revalidate HTML
+
+[[headers]]
+  for = "/partials/*"
+  [headers.values]
+    Cache-Control = "public, max-age=3600"
+    # 1 hour for partials/templates
+
+# Don't add blanket cache headers for functions - handle per function instead
+# [[headers]]
+#   for = "/.netlify/functions/*"
+#   [headers.values]
+#     Cache-Control = "no-cache, no-store, must-revalidate"
+
+# Security Headers (bonus - prevents clickjacking, XSS, etc.)
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
