--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth0/auth0-spa-js": "^2.9.1",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@toast-ui/editor": "^3.2.2",
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "imagekit-javascript": "^1.5.4",
     "jsonwebtoken": "^9.0.3",
