--- a/package.json
+++ b/package.json
@@ -7,18 +7,27 @@
   "scripts": {
     "dev": "webpack serve --mode development",
     "netlify": "netlify dev",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+     "migrate:usernames": "node scripts/add-usernames.js",
+  "migrate:slugs": "node scripts/add-recipe-slugs.js",
+  "migrate:all": "npm run migrate:usernames && npm run migrate:slugs",
+  "migrate:fix-orphaned": "node scripts/fix-orphaned-recipes.js",
+   "db:list-users": "node scripts/list-users.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.9.1",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@toast-ui/editor": "^3.2.2",
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "imagekit-javascript": "^1.5.4",
+    "jsonwebtoken": "^9.0.3",
+    "jwks-rsa": "^3.2.0",
     "marked": "^17.0.0",
     "moment": "^2.29.4",
-    "mongodb": "^6.2.0",
+    "mongodb": "^6.21.0",
     "node-fetch": "^3.2.10",
     "notyf": "^3.10.0",
     "realm-web": "^1.7.1",
